--- a/graypaper.tex
+++ b/graypaper.tex
@@ -26,7 +26,7 @@
 \input{text/recent_history.tex}
 \input{text/authorization.tex}
 \input{text/accounts.tex}
-\input{text/judgements.tex}
+\input{text/judgments.tex}
 \input{text/reporting_assurance.tex}
 \input{text/accumulation.tex}
 \input{text/ratings.tex}
