--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -216,7 +216,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\sigma$] The $\sigma$verall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}. %	σ
   \item[$\tau$] The most recent block's $\tau$imeslot. %	τ
   \item[$\varphi$] The authorization queue. %	ϕ
-  \item[$\psi$] Past judgements on work-reports and validators. %	ψ
+  \item[$\psi$] Past judgments on work-reports and validators. %	ψ
   \begin{description}
     \item[$\badset$] Work-reports judged to be incorrect.
     \item[$\goodset$] Work-reports judged to be correct.
