--- a/text/overview.tex
+++ b/text/overview.tex
@@ -21,7 +21,7 @@ The header is a collection of metadata primarily concerned with cryptographic re
 
 \begin{description}
   \item[tickets] Tickets, used for the mechanism which manages the selection of validators for the permissioning of block authoring. This component is denoted $\xttickets$.
-  \item[judgements] Votes, by validators, on dispute(s) arising between them presently taking place. This is denoted $\xtdisputes$.
+  \item[judgments] Votes, by validators, on dispute(s) arising between them presently taking place. This is denoted $\xtdisputes$.
   \item[preimages] Static data which is presently being requested to be available for workloads to be able to fetch on demand. This is denoted $\xtpreimages$.
   \item[availability] Assurances by each validator concerning which of the input data of workloads they have correctly received and are storing locally. This is denoted $\xtassurances$.
   \item[reports] Reports of newly completed workloads whose accuracy is guaranteed by specific validators. This is denoted $\xtguarantees$.
@@ -40,7 +40,7 @@ Validators, who are the set of economic actors uniquely privileged to help build
 
 Our state also tracks two aspects of each core: $\alpha$, the authorization requirement which work done on that core must satisfy at the time of being reported on-chain, together with the queue which fills this, $\varphi$; and $\rho$, each of the cores' currently assigned \emph{report}, the availability of whose \emph{work-package} must yet be assured by a super-majority of validators.
 
-Finally, details of the most recent blocks and time are tracked in $\beta$ and $\tau$ respectively and, judgements are tracked in $\psi$ and validator statistics are tracked in $\pi$.
+Finally, details of the most recent blocks and time are tracked in $\beta$ and $\tau$ respectively and, judgments are tracked in $\psi$ and validator statistics are tracked in $\pi$.
 
 \subsubsection{State Transition Dependency Graph}
 
