--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -20,7 +20,7 @@ Beyond the production of blocks, incentivized honest behavior includes:
 \begin{itemize}
     \item the guaranteeing and reporting of work-packages, along with chunking and distribution of both the chunks and the work-package itself, discussed in section \ref{sec:guaranteeing};
     \item assuring the availability of work-packages after being in receipt of their data;
-    \item determining which work-reports to audit, fetching and auditing them, and creating and distributing judgements appropriately based on the outcome of the audit;
+    \item determining which work-reports to audit, fetching and auditing them, and creating and distributing judgments appropriately based on the outcome of the audit;
     \item submitting the correct amount of auditing work seen being done by other validators, discussed in section \ref{sec:bookkeeping}.
 \end{itemize}
 
