--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -1,4 +1,4 @@
-\section{Disputes, Verdicts and Judgements}\label{sec:disputes}
+\section{Disputes, Verdicts and Judgments}\label{sec:disputes}
 
 \newcommand*{\verdicts}{\mathbf{V}}
 \newcommand*{\xtverdicts}{\mathbf{v}}
