WP2WR: More succinct formalism

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -164,24 +164,19 @@ where:
     (r, \mathbf{e}) = \countupexports(\wpX, j),
     j \orderedin \N_{|\wpX_\wp¬workitems|}
   ] \\
-  \countupexports(\wpX, j) &\equiv \marshallrefine(
-    \wpX,
-    \wpX_\wp¬workitems[j],
-    \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportsegments
-  )\\
-  \marshallrefine(\wpX, w, \ell) &\equiv \\
-  &\!\!\!\!\!\!\!\Psi_R(
+  \countupexports(\wpX, j) &\equiv \Psi_R(
     \wiX_c,
     \wiX_g,
     \wiX_s,
-    \mathcal{H}(\wpX),
+    h,
     \wiX_\mathbf{y},
     \wpX_\wp¬context,
     \wpX_\wp¬authorizer,
     \importsegmentdata(w),
     \extrinsicdata(w),
     \ell
-  )
+  )\\
+  &\!\!\!\!\!\!\!\!\where h = \mathcal{H}(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportsegments
 \end{align*}
 
 The definition here is staged over several functions for ease of reading. The first term to be introduced, $\mathbf{o}$ is the authorization output, the result of the Is-Authorized function. The second term, $(\mathbf{r}, \overline{\mathbf{e}})$ is the sequence of results for each of the work-items in the work-package together with all segments exported by each work-item.
