More work on lookup dict

--- a/preamble.tex
+++ b/preamble.tex
@@ -156,7 +156,6 @@
 \newcommand*{\wp¬authparam}{\mathbf{p}}
 \newcommand*{\wp¬context}{\mathbf{x}} % Consider rename to \mathbf{c}
 \newcommand*{\wp¬workitems}{\mathbf{w}}
-\newcommand*{\wp¬srlookup}{\mathbf{l}}
 
 \newcommand*{\wp¬authorizer}{a}
 \newcommand*{\wp¬authcode}{\mathbf{c}}
@@ -164,6 +163,8 @@
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 \newcommand*{\wi¬exportsegments}{e}
+
+\newcommand*{\wr¬srlookup}{\mathbf{l}}
 
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\vartheta}
