--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -59,31 +59,37 @@ The guarantor is able to use this proof to justify to themselves that they are n
 
 We begin by defining a \emph{work-package}, of set $\mathbb{P}$, and its constituent \emph{work item}s, of set $\mathbb{I}$. A work-package includes a simple blob acting as an authorization token $\wp¬authtoken$, the index of the service which hosts the authorization code $\wp¬authcodehost$, an authorization code hash $\wp¬authcodehash$ and a parameterization blob $\wp¬authparam$, a context $\wp¬context$ and a sequence of work items $\wp¬workitems$:
 \begin{equation}\label{eq:workpackage}
-  \mathbb{P} \equiv \tuple{\;\begin{aligned}
-    &\isa{\wp¬authtoken}{\Y},\ \ \isa{\wp¬authcodehost}{\N_S},\ \ \isa{\wp¬authcodehash}{\H},\ \ \isa{\wp¬authparam}{\Y},\\
-    &\isa{\wp¬context}{\mathbb{X}},\ \isa{\wp¬workitems}{\seq{\mathbb{I}}_{1:\mathsf{I}}},\ \isa{\wp¬srlookup}{\dict{\H}{\H}}
+  \mathbb{P} \equiv \tuple{
+    \isa{\wp¬authtoken}{\Y},\ 
+    \isa{\wp¬authcodehost}{\N_S},\ 
+    \isa{\wp¬authcodehash}{\H},\ 
+    \isa{\wp¬authparam}{\Y},\ 
+    \isa{\wp¬context}{\mathbb{X}},\ 
+    \isa{\wp¬workitems}{\seq{\mathbb{I}}_{1:\mathsf{I}}}
+  }
+\end{equation}
+
+A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\mathbf{y}$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ which identify a prior exported segment through an index and the identity of an exporting work-package, $\wi¬extrinsics$, a sequence of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportsegments$ the number of data segments exported by this work item.
+\begin{equation}\label{eq:workitem}
+  \mathbb{I} \equiv \tuple{\begin{aligned}
+    &\isa{s}{\N_S},
+    \isa{c}{\H},
+    \isa{\mathbf{y}}{\Y},
+    \isa{g}{\N_G},
+    \isa{\wi¬exportsegments}{\N}, \\
+    &\isa{\wi¬importsegments}{\seq{\tuple{\H \cup (\H^\boxplus),\N}}},
+    \isa{\wi¬extrinsics}{\seq{(\H, \N)}}
   \end{aligned}}
 \end{equation}
 
-A work item includes: $s$ the identifier of the service to which it relates, the code hash of the service at the time of reporting $c$ (whose preimage must be available from the perspective of the lookup anchor block), a payload blob $\mathbf{y}$, a gas limit $g$, and the three elements of its manifest, a sequence of imported data segments $\wi¬importsegments$ identified by the root of the \emph{segments tree} and an index into it, $\wi¬extrinsics$, a sequence of hashed of blob hashes and lengths to be introduced in this block (and which we assume the validator knows) and $\wi¬exportsegments$ the number of data segments exported by this work item:
-\begin{equation}\label{eq:workitem}
-    \mathbb{I} \equiv \tuple{\begin{aligned}
-      &\isa{s}{\N_S} \ts
-      \isa{c}{\H} \ts
-      \isa{\mathbf{y}}{\Y} \ts
-      \isa{g}{\N_G} \ts \\
-      &\isa{\wi¬importsegments}{\seq{\tuple{\H,\N}}} \ts
-      \isa{\wi¬extrinsics}{\seq{(\H, \N)}} \ts
-      \isa{\wi¬exportsegments}{\N}
-    \end{aligned}}
-\end{equation}
+Note that an imported data segment's work-package is identified through the union of sets $\H$ and a tagged variant $\H^\boxplus$. A value drawn from the regular $\H$ implies the hash value is of the segment-root containing the export, whereas a value drawn from $\H^\boxplus$ implies the hash value is the hash of the exporting work-package. In the latter case it must be converted into a segment-root by the guarantor and this conversion reported in the work-report for on-chain validation.
 
-We limit the number of items in the segment-root lookup dictionary to 8. We also limit both the total number of exported items and the total number of imported items to $\mathsf{W}_M = 2^{11}$:
+
+We limit both the total number of exported items and the total number of imported items to $\mathsf{W}_M = 2^{11}$:
 \begin{equation}
   \forall \wpX \in \mathbb{P}:
   \sum_{\wiX \in \wpX_\wp¬workitems} \wiX_\wi¬exportsegments \le \mathsf{W}_M \ \wedge\ 
-  \sum_{\wiX \in \wpX_\wp¬workitems} |\wiX_\wi¬importsegments| \le \mathsf{W}_M \ \wedge\ 
-  |\wpX_\wp¬srlookup| \le 8
+  \sum_{\wiX \in \wpX_\wp¬workitems} |\wiX_\wi¬importsegments| \le \mathsf{W}_M
 \end{equation}
 
 We make an assumption that the preimage to each extrinsic hash in each work-item is known by the guarantor. In general this data will be passed to the guarantor alongside the work-package.
